--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ configurations {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
-	  
+	compile("mysql:mysql-connector-java:5.1.38")
+	compile("org.springframework:spring-jdbc:4.2.4.RELEASE")
     compile('io.springfox:springfox-swagger2:2.0.1')
     compile('io.springfox:springfox-swagger-ui:2.0.2')
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
