--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 multipart.maxFileSize:5120MB
 multipart.maxRequestSize:5120MB
+ClassName = com.mysql.jdbc.Driver
+Url = jdbc:mysql://10.1.249.41:3306/sabha
+usrname = root
+pswd = root
