--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ configurations {
 }
 
 dependencies {
+	compile 'org.apache.commons:commons-lang3:3.0'
 	compile('org.springframework.boot:spring-boot-starter-web')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	compile("mysql:mysql-connector-java:5.1.38")
