Swagger Chnages commited but ui implementation is not able to do yet now

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.3.3.RELEASE'
+		springBootVersion = '1.2.4.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -25,20 +25,25 @@ targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	jcenter();
 }
 
 configurations {
 	providedRuntime
 }
 
+repositories {
+    maven { url "https://repo.spring.io/release" }
+}
+
 dependencies {
-	compile 'org.apache.commons:commons-lang3:3.0'
+	//compile 'org.apache.commons:commons-lang3:3.0'
 	compile('org.springframework.boot:spring-boot-starter-web')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	compile("mysql:mysql-connector-java:5.1.38")
 	compile("org.springframework:spring-jdbc:4.2.4.RELEASE")
-    compile('io.springfox:springfox-swagger2:2.0.1')
-    compile('io.springfox:springfox-swagger-ui:2.0.2')
+     compile("io.springfox:springfox-swagger2:2.0.2")
+    compile("io.springfox:springfox-swagger-ui:2.0.2")
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
