.class file commited

--- a/bin/application.properties
+++ b/bin/application.properties
@@ -1,2 +1,7 @@
+server.port=8081
 multipart.maxFileSize:5120MB
 multipart.maxRequestSize:5120MB
+className = com.mysql.jdbc.Driver
+url = jdbc:mysql://10.1.249.41:3306/sabha
+usrname = root
+pswd = root
