Swagger 2 implemented into interview Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ className = com.mysql.jdbc.Driver
 url = jdbc:mysql://10.1.249.41:3306/sabha
 usrname = root
 pswd = root
-enable.mysql=false
+enable.mysql=true
