--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
 	ext {
-		springBootVersion = '1.2.8.RELEASE'
+		  springBootVersion = '1.2.8.RELEASE'
+        springFrameworkVersion = '4.2.5.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -38,12 +39,11 @@ repositories {
 
 dependencies {
 	//compile 'org.apache.commons:commons-lang3:3.0'
-	compile('org.springframework.boot:spring-boot-starter-web')
-	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
+	//compile('org.springframework.boot:spring-boot-starter-web')
 	compile("mysql:mysql-connector-java:5.1.38")
-	compile("org.springframework:spring-jdbc:4.2.5.RELEASE")
-    compile("io.springfox:springfox-swagger2:2.4.0")
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+	compile("org.springframework.boot:spring-boot-starter-jdbc:${springBootVersion}")
+    compile ("io.springfox:springfox-swagger2:2.4.0")
+	//testCompile("org.springframework.boot:spring-boot-starter-test") 
 }
 
 
