--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ repositories {
 
 dependencies {
 	//compile 'org.apache.commons:commons-lang3:3.0'
-	//compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("mysql:mysql-connector-java:5.1.38")
 	compile("org.springframework.boot:spring-boot-starter-jdbc:${springBootVersion}")
     compile ("io.springfox:springfox-swagger2:2.4.0")
